# doppleriann

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
data/: SHELLS_README.md  mask_kitcat_NEW_kitcat_CCF_mask_Sun.npz  random_idx_test.npy  random_idx_train.npy  time_df.csv  waves_kitcat.txt
data_generators/: ccf_data_generator.py  data_generator_README.md  load_harpsn_data.py  temp_and_kitcat_gen.py  test_shell_gen_fixed.py
doppleriann/: __init__.py
doppleriann/data/: __init__.py  data_loader.py  scalers.py  shell_generation.py
doppleriann/networks/: __init__.py  aes.py  base_networks.py  cnns.py  cvae.py  kann.py  mlp.py  net_blocks.py
doppleriann/physics/: CCFcalculator.py  __init__.py  shell_utils.py  signal_utils.py  spec_transform.py
doppleriann/physics/ccf_resources/: BIS_FIT2.cpp  fit_CCF.c  setup_fit_CCF_PPP.py
doppleriann/utils/: __init__.py  logger_config.py
experiments/cnnShell_CV/: cnnShellCVDetection.py  cnnShellFluxCV.py  cnnShellTempCV.py  cv_cnn_detection.py  cv_cnn_predict.py  join_chunks.py
experiments/cnnShell_CV/models/: cnnshellCV5_9_temp_act_mask_res_fold0_scalerx.pkl  cnnshellCV5_9_temp_act_mask_res_fold0_scalery.pkl  cnnshellCV5_9_temp_act_mask_res_fold1_scalerx.pkl  (+7 more)
experiments/cnnShell_HO/: cnnShellDetection.py  cnnShellFlux.py  cnnShellLoad.py  cnnShellOptuna.py  cnnShellTemp.py
large_data/: spectra_kitcat_act.npy  spectra_kitcat_act_err.npy  temp_kitcat_act.npy  temp_kitcat_or_err.npy
notebooks/: ccf_calculator.py  detection_maps.py  pure_ds.py  shells_plots.py  shells_plots_on_the_fly.py
(+10 files in other folders)
