[project]
name = "doppleriann"
version = "1.0.0"
description = "Doppler-shift Inference with Artificial Neural Networks (DopplerIANN)"
authors = [
  { name = "Isidro Gomez-Vargas", email = "isidro.gomezvargas@unige.ch" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

# --- Core dependencies required by the framework ---
dependencies = [
  "numpy>=1.26.0",
  "scipy>=1.12.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.3.0",
  "tensorflow>=2.15.0",
  "h5py>=3.10.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "optuna>=3.6.0",
  "deap>=1.4.0",
  "tqdm>=4.66.0",
  "astropy>=6.0.0",
  "astroquery>=0.4.6",
  "pyastronomy>=0.21.0",
  "statsmodels>=0.14.0",
  "tables",
]

[project.optional-dependencies]
viz = ["plotly>=5.22.0"]
notebooks = ["jupyterlab>=4.2.0", "ipykernel>=6.29.0"]
dev = ["pytest>=8.2.0", "pre-commit>=3.8.0", "ruff>=0.6.4", "black>=24.8.0"]
bayes = ["kima", "dynesty>=2.1.4", "tensorflow-probability>=0.23.0", "theano-pymc>=1.1.0", "arviz>=0.17.0"]

all = [
  "plotly>=5.22.0",
  "jupyterlab>=4.2.0",
  "ipykernel>=6.29.0",
  "pytest>=8.2.0",
  "pre-commit>=3.8.0",
  "ruff>=0.6.4",
  "black>=24.8.0",
  "kima",
  "dynesty>=2.1.4",
  "tensorflow-probability>=0.23.0",
  "theano-pymc>=1.1.0",
  "arviz>=0.17.0"
]


[tool.ruff]
line-length = 99
lint.extend-select = ["B", "I", "W"]

[tool.setuptools.packages.find]
include = ["doppleriann*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.cpp", "*.c"]
